# rangeset

./: .gitignore  README.md  pyproject.toml
src/rangeset/: __init__.py  core.py  errors.py
tests/: __init__.py  test_add_remove.py  test_construction.py  test_edge_cases.py  test_queries.py  test_set_operations.py
